--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="card">
+		<img src="http://wallpapercave.com/wp/wc1709230.jpg" class="img" alt="sauske"  >
+		<center><h1 class="h">Sasuke</h1></center>
+		<center><p class="p1">Price:$123</p></center>
+		<center><p class="p2">Description:Lorem kjhx agd hkjm sdcg hkjbdc xcvh</p></center>
+		<center><button class="btn">Buy Now</button></center>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
